kubernetes/runner-pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner-pool
  namespace: java-projects
spec:
  replicas: 2
  selector:
    matchLabels:
      app: runner
      status: idle
  template:
    metadata:
      labels:
        app: runner
        status: idle
    spec:
      containers:
        - name: runner
          image: node:20-alpine
          workingDir: /app
          command: ["/bin/sh", "-c", "sleep infinity"]
          volumeMounts:
            - name: workspace
              mountPath: /app
            - name: pnpm-store
              mountPath: /root/.local/share/pnpm
          resources:
            limits:
              memory: "1Gi"
          ports:
            - containerPort: 5173

        - name: syncer
          image: minio/mc  #shell cmds for minio
          command: ["/bin/sh", "-c", "sleep infinity"]
          volumeMounts:
            - name: workspace
              mountPath: /app


      volumes:
        - name: workspace
          emptyDir: {}
        - name: pnpm-store
          hostPath:
            path: /mnt/pnpm-store
            type: DirectoryOrCreate
