kubernetes/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-project-pods
  namespace: java-projects
spec:
  podSelector:
    matchLabels:
      status: busy # Only restrict pods that have been assigned a project
  policyTypes:
    - Ingress
    - Egress

  # INGRESS: Who can talk TO the Runner?
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: devvvotee-proxy
      ports:
        - protocol: TCP
          port: 5173  # our proxy service can only access this port on pods

  # EGRESS: Who can the Runner talk TO?
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
